# Afsim

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.md  README.md  generate_docx.py  requirements.txt
core/sensor_plot_lib/: CMakeLists.txt  README.md  wsf_cmake_extension.cmake
core/wsf/: CMakeLists.txt  README.md  event_pipe.cmake  optional_projects.cmake  wsf_extensions.hpp.in
core/wsf_cyber/: CMakeLists.txt  README.md  wsf_cmake_extension.cmake  wsf_cyber_events.utpack
core/wsf_grammar_check/: CMakeLists.txt  README.md  wsf_cmake_extension.cmake
core/wsf_l16/: CMakeLists.txt  README.md  wsf_cmake_extension.cmake
core/wsf_mil/: CMakeLists.txt  README.md  wsf_cmake_extension.cmake  wsf_mil_events.utpack
core/wsf_mil_parser/: CMakeLists.txt  README.md  wsf_cmake_extension.cmake
core/wsf_mtt/: CMakeLists.txt  README.md  wsf_cmake_extension.cmake
core/wsf_nx/: CMakeLists.txt  README.md  wsf_cmake_extension.cmake
core/wsf_parser/: CMakeLists.txt  README.md  wsf_cmake_extension.cmake
core/wsf_ripr/: CMakeLists.txt  README.md  wsf_cmake_extension.cmake
core/wsf_space/: CMakeLists.txt  README.md  wsf_cmake_extension.cmake  wsf_space_events.utpack
core/wsf_weapon_server/: CMakeLists.txt  README.md  wsf_cmake_extension.cmake
engage/: CMakeLists.txt  README.md  wsf_cmake_extension.cmake
engage/doc/: _baseline_execs.txt  _conditional_section.txt  engage.rst  print_em_interaction_engage.rst  print_sensor_result.rst  print_track_data.txt
engage/grammar/: engage.ag
engage/source/: ApplicationExtension.cpp  ApplicationExtension.hpp  Constants.hpp  EventItem.cpp  EventItem.hpp  Events.cpp  Events.hpp  InputConfig.cpp  InputConfig.hpp  OutputConfig.cpp  OutputConfig.hpp  OutputItem.cpp  OutputItem.hpp  OutputRate.cpp  OutputRate.hpp  Platform.cpp  Platform.hpp  RunConfig.cpp  RunConfig.hpp  ScriptExtensions.cpp  ScriptExtensions.hpp  Simulation.cpp  Simulation.hpp  SimulationExtension.cpp  SimulationExtension.hpp  SimulationThread.cpp  SimulationThread.hpp  SiteConfig.cpp  SiteConfig.hpp  SummaryData.cpp  SummaryData.hpp  TargetConfig.cpp  TargetConfig.hpp  Task.cpp  Task.hpp  TaskManager.cpp  TaskManager.hpp  TaskOutput.cpp  TaskOutput.hpp  Types.hpp  (+6 more)
engage/tests/: auto_test.py  chaff_example.txt  grid_w_observer.txt  lrsam.txt  lrsam_ttr.txt  mar.txt  mar_esams.txt  post_process_test.txt  reactive_maneuvers_esams.txt  reactive_maneuvers_processor_basic.txt  regression_test.py  towed_decoy.txt  utility_scripts.txt  utility_test_functions.txt
evt_reader/source/: CMakeLists.txt  EventModel.cpp  EventModel.hpp  EventTableDialog.cpp  EventTableDialog.hpp  evt_reader.cpp  version_info.cmake
externModel/sensor/: CMakeLists.txt  sensor_dox.txt  wsf_cmake_extension.cmake
mission/: CMakeLists.txt  README.md  wsf_cmake_extension.cmake
mission/doc/: _baseline_execs.txt  mission.rst
mission/source/: MissionVersion.hpp  mission.cpp  version_info.cmake
mission/tests/: auto_test.py  regression_test.py
mover_creator/: CMakeLists.txt  LICENSE.md  README.md  wsf_cmake_extension.cmake  wsf_module
mover_creator/data/: APConfig.ini  FlightTestConfig.ini  Notes.txt
mover_creator/doc/: _baseline_apps.txt  mc_aerodynamics.rst  mc_autopilot.rst  mc_change_log.rst  mc_engine_designer.rst  mc_flight_test.rst  mc_geometry.rst  mc_performance.rst  mc_pilots_controls.rst  mc_reference_guide.rst  mc_standard_airfoils.rst  mc_standard_engines.rst  mc_standard_vehicles.rst  mc_theory.rst  mc_users_guide.rst  mover_creator.rst
mover_creator/source/: AboutDialog.cpp  AboutDialog.hpp  AeroBody.cpp  AeroBody.hpp  AeroData.cpp  AeroData.hpp  AeroDish.cpp  AeroDish.hpp  AeroEngine.cpp  AeroEngine.hpp  AeroFullFlyingSurface.cpp  AeroFullFlyingSurface.hpp  AeroHingedSurface.cpp  AeroHingedSurface.hpp  AeroJetEngine.cpp  AeroJetEngine.hpp  AeroLandingGear.cpp  AeroLandingGear.hpp  AeroLiquidRocketEngine.cpp  AeroLiquidRocketEngine.hpp  AeroMovableSurface.hpp  AeroNacelle.cpp  AeroNacelle.hpp  AeroObject.cpp  AeroObject.hpp  AeroPanel.cpp  AeroPanel.hpp  AeroRamjetEngine.cpp  AeroRamjetEngine.hpp  AeroSolidRocketEngine.cpp  AeroSolidRocketEngine.hpp  AeroSpeedBrake.cpp  AeroSpeedBrake.hpp  AeroSurface.cpp  AeroSurface.hpp  AeroTable2d.cpp  AeroTable2d.hpp  AeroTable3d.cpp  AeroTable3d.hpp  AeroTable4d.cpp  (+187 more)
mover_creator/ui/: AboutDialog.ui  AerodynamicsWidget.ui  AirfoilWidget.ui  AuditErrorDialog.ui  AutopilotWidget.ui  CalculateAeroDialog.ui  ControlsWidget.ui  ConvertBrawlerAircraftDialog.ui  CreateAircraftDialog.ui  CreateEngineDialog.ui  CreateWeaponDialog.ui  CubicSplinePlotManagerWidget.ui  DeleteAircraftDialog.ui  DeleteEngineDialog.ui  DeleteWeaponDialog.ui  EditAircraftDialog.ui  EditEngineDialog.ui  EditWeaponDialog.ui  EngineDesignerWidget.ui  EngineSaveDialog.ui  FlightTestWidget.ui  G_LimitSettingsDialog.ui  GeometryOptionsDialog.ui  GeometrySettingsDialog.ui  GeometryWidget.ui  GraphicsViewWidget.ui  IntroductionWidget.ui  JetEngineWidget.ui  KnotAdderDialog.ui  KnotEditorDialog.ui  LiquidRocketEngineWidget.ui  MoverCreatorMainWindow.ui  MoverCreatorWidget.ui  NewTypeDialog.ui  PerformanceTestWidget.ui  PerformanceWidget.ui  PlotManagerWidget.ui  RamjetEngineWidget.ui  SettingsDialog.ui  SolidRocketEngineWidget.ui  (+1 more)
mover_creator/wsftheme/: wsf_sidebar_mover_creator.html
post_processor/: .gitignore  CMakeLists.txt  LICENSE.md  README.md  wsf_cmake_extension.cmake
post_processor/WizPostProcessor/: wizard_plugin.cmake
sensor_plot/: CMakeLists.txt  README.md  wsf_cmake_extension.cmake
sensor_plot/data/: ebs.txt  genap.txt  generic_sar.txt  hm-atn.txt  hm-plot.cmd  hm-req-rcs.txt  hm-sar.txt  hm-tin-shield.txt  hp-cnr-sar.txt  hp-dwell-sar.txt  hp-ebs.txt  hp-pdmap-acoustic.txt  hp-pdmap-esm.txt  hp-pdmap-ir.txt  hp-pdmap-jammer.txt  hp-pdmap.txt  hp-sedit-salram.txt  hp-sedit.txt  run.bat  rund.bat  s_plot.m  system_type.sh  test_ap.txt  (+11 more)
warlock/: CMakeLists.txt  README.md  wsf_cmake_extension.cmake
weapon_tools/: CMakeLists.txt  README.md  wsf_cmake_extension.cmake
wizard/: CMakeLists.txt  README.md  wsf_cmake_extension.cmake
(+23055 files in other folders)
